--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "main": "index.js",
   "dependencies": {
     "bluebird": "^3.5.1",
+    "fast-csv": "^4.3.6",
     "mocha": "^4.0.1",
     "nyc": "^11.3.0",
     "validator": "^9.1.1"
   },
-  "devDependencies": {},
   "bugs": {
     "url": "https://github.com/bighappyworld/email-verify/issues"
   },
