--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "dependencies": {
     "bluebird": "^3.5.1",
+    "convert-array-to-csv": "^2.0.0",
+    "dotenv": "^16.0.3",
     "fast-csv": "^4.3.6",
     "mocha": "^4.0.1",
     "nyc": "^11.3.0",
